--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,6 @@ AC_PROG_CC
 AM_PROG_CC_C_O
 AC_PROG_CXX
 AC_PROG_LIBTOOL
-AC_PROG_DOXYGEN
 
 LT_INIT
 
@@ -34,6 +33,13 @@ AC_ARG_WITH([cblas],
 	[AM_LDFLAGS="$AM_LDFLAGS -L$with_cblas/lib"],
 	[]
 )
+AC_ARG_WITH([Minuit2],
+    [AS_HELP_STRING([--with-Minuit2=prefix],
+	[try this for a non-standard install prefix of the Minuit2 library])],
+    [AM_CFLAGS="$AM_CFLAGS -I$with_gsl/include"]
+	[AM_LDFLAGS="$AM_LDFLAGS -L$with_gsl/lib"],
+	[]
+)
 
 CFLAGS="$AM_CFLAGS $CFLAGS"
 LDFLAGS="$AM_LDFLAGS $LDFLAGS"
@@ -44,6 +50,21 @@ AC_CHECK_LIB([cblas],[cblas_dgemm],[],
 	[AC_CHECK_LIB([gslcblas],[cblas_dgemm],[],
 		[AC_MSG_ERROR([CBLAS library not found])])])
 AC_CHECK_LIB([gsl],[gsl_blas_dgemm],[],[AC_MSG_ERROR([GSL library not found])])
+AC_LANG([C++])
+SAVED_LDFLAGS=$LDFLAGS
+LDFLAGS="$LDFLAGS -lMinuit2"
+AC_MSG_CHECKING([for ROOT::Minuit2::BasicMinimumError in -lMinuit2]);
+AC_LINK_IFELSE(
+	[AC_LANG_PROGRAM([#include <Minuit2/BasicMinimumError.h>],
+	[ROOT::Minuit2::BasicMinimumError dummy(0)])],
+	[LIBS="$LIBS -lMinuit2"]
+	[AC_DEFINE([HAVE_MINUIT2],
+				[1],
+				[Define to 1 if you have the `Minuit2' library (-lMinuit2).])]
+	[AC_MSG_RESULT([yes])],
+	[AC_MSG_RESULT([no])])
+LDFLAGS=$SAVED_LDFLAGS
+AC_LANG([C])
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -63,5 +84,5 @@ AC_SUBST([LIBS])
 AC_SUBST([AM_CFLAGS])
 AC_SUBST([AM_LDFLAGS])
 
-AC_CONFIG_FILES([Makefile latan/Makefile])
+AC_CONFIG_FILES([Makefile latan/Makefile doc/Makefile])
 AC_OUTPUT
