--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 info_TEXINFOS = latanalyze.texi
-latanalyze_TEXINFOS = error.texi
+latanalyze_TEXINFOS = error.texi mat.texi
 
 all: pdf info html
 
