--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,11 @@ examples/ex_rand
 examples/ex_rand.rand
 examples/ex_plot
 examples/ex_stat
+utils/latan_create_rg_state
 utils/latan_info
+utils/latan_rs_add
+utils/latan_rs_mul
+utils/latan_rs_sub
 
 # Apple stuffs
 *.xcodeproj
