CUBLAS interface is compiled separately (CUBLAS header is not ANSI compliant)

--- a/latan/Makefile.am
+++ b/latan/Makefile.am
@@ -7,7 +7,16 @@ COM_CXXFLAGS = -Wall -Wconversion -Wshadow -Wpointer-arith -Wcast-qual		\
 	-Wcast-align -Wwrite-strings -W -fPIC -fshort-enums -fno-common -O2 -g	\
 	-pedantic
 
+noinst_LTLIBRARIES = liblatancublas.la
 lib_LTLIBRARIES = liblatan.la
+
+liblatancublas_la_SOURCES = \
+	latan_mat_cublas.h		\
+	latan_mat_cublas.c		\
+	latan_globals.h			\
+	latan_mat.h				\
+	latan_error.h
+	
 liblatan_la_SOURCES =		\
 	latan_error.c			\
 	latan_fit.c				\
@@ -17,8 +26,6 @@ liblatan_la_SOURCES =		\
 	latan_io.c				\
 	latan_mass.c			\
 	latan_mat.c				\
-	latan_mat_cublas.h		\
-	latan_mat_cublas.c		\
 	latan_math.c			\
 	latan_minimizer.c		\
 	latan_min_gsl.h			\
@@ -46,6 +53,7 @@ liblatan_la_HEADERS =		\
 	latan_plot.h			\
 	latan_statistics.h		\
 	latan_rand.h
+liblatan_la_LIBADD = ./liblatancublas.la
 liblatan_la_CFLAGS = $(COM_CFLAGS)
 liblatan_la_CXXFLAGS = $(COM_CXXFLAGS)
 
