--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -8,8 +8,10 @@ bin_PROGRAMS =				\
 	latan_info			\
 	latan_mat_bench			\
 	latan_rs_add			\
+	latan_rs_adds			\
 	latan_rs_div			\
 	latan_rs_mul			\
+	latan_rs_muls			\
 	latan_rs_sub			\
 	latan_rs_sqrt
 
@@ -29,6 +31,10 @@ latan_rs_add_SOURCES = latan_rs_binop.c
 latan_rs_add_CFLAGS = $(COM_CFLAGS) -DBINOP=mat_add
 latan_rs_add_LDFLAGS = -llatan -L../latan/.libs
 
+latan_rs_adds_SOURCES = latan_rs_binops.c
+latan_rs_adds_CFLAGS = $(COM_CFLAGS) -DBINOPS=mat_adds
+latan_rs_adds_LDFLAGS = -llatan -L../latan/.libs
+
 latan_rs_div_SOURCES = latan_rs_binop.c
 latan_rs_div_CFLAGS = $(COM_CFLAGS) -DBINOP=mat_divp
 latan_rs_div_LDFLAGS = -llatan -L../latan/.libs
@@ -37,6 +43,10 @@ latan_rs_mul_SOURCES = latan_rs_binop.c
 latan_rs_mul_CFLAGS = $(COM_CFLAGS) -DBINOP=mat_mulp
 latan_rs_mul_LDFLAGS = -llatan -L../latan/.libs
 
+latan_rs_muls_SOURCES = latan_rs_binops.c
+latan_rs_muls_CFLAGS = $(COM_CFLAGS) -DBINOPS=mat_muls
+latan_rs_muls_LDFLAGS = -llatan -L../latan/.libs
+
 latan_rs_sub_SOURCES = latan_rs_binop.c
 latan_rs_sub_CFLAGS = $(COM_CFLAGS) -DBINOP=mat_sub
 latan_rs_sub_LDFLAGS = -llatan -L../latan/.libs
@@ -44,5 +54,7 @@ latan_rs_sub_LDFLAGS = -llatan -L../latan/.libs
 latan_rs_sqrt_SOURCES = latan_rs_unop.c
 latan_rs_sqrt_CFLAGS = $(COM_CFLAGS) -DUNOP=mat_sqrt
 latan_rs_sqrt_LDFLAGS = -llatan -L../latan/.libs
+
+
 
 ACLOCAL_AMFLAGS = -I .buildutils/m4
