--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,6 +1,6 @@
 info_TEXINFOS = latanalyze.texi
 latanalyze_TEXINFOS = error.texi mat.texi
 
-all: pdf info 
+all: info
 
 ACLOCAL_AMFLAGS = -I .buildutils/m4
