build system various fixes

--- a/configure.ac
+++ b/configure.ac
@@ -59,7 +59,7 @@ AC_ARG_WITH([Minuit2],
 AC_ARG_WITH([xml2],
     [AS_HELP_STRING([--with-xml2=prefix],
 		[try this for a non-standard install prefix of the xml2 library])],
-    [AM_CFLAGS="$AM_CFLAGS -I$with_xml2/include"]
+    [AM_CFLAGS="$AM_CFLAGS -I$with_xml2/include -I$with_xml2/include/libxml2"]
 	[AM_LDFLAGS="$AM_LDFLAGS -L$with_xml2/lib"],
 	[]
 )
@@ -154,7 +154,6 @@ AC_CHECK_HEADERS([unistd.h])
 AC_TYPE_SIZE_T
 
 # Checks for library functions.
-AC_FUNC_ERROR_AT_LINE
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([sqrt],[],[AC_MSG_ERROR([sqrt function not found])])
