--- a/configure.ac
+++ b/configure.ac
@@ -131,6 +131,7 @@ AS_IF([test "x$enable_Accelerate" = "xyes"],
 AC_CHECK_LIB([gsl],[gsl_blas_dgemm],[],[AC_MSG_ERROR([GSL library not found])])
 AC_CHECK_LIB([xml2],[xmlFree],[],[])
 AC_LANG([C++])
+AC_CHECK_LIB([stdc++],[main],[LIBS="-lstdc++ $LIBS"],[AC_MSG_ERROR([libstdc++ library not found])])
 SAVED_LDFLAGS=$LDFLAGS
 LDFLAGS="$LDFLAGS -lMinuit2"
 AC_MSG_CHECKING([for ROOT::Minuit2::BasicMinimumError in -lMinuit2]);
