matrix sum function

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -23,6 +23,7 @@ bin_PROGRAMS =              \
 	latan_rs_muls           \
     latan_rs_read           \
 	latan_rs_sub            \
+    latan_rs_sum            \
 	latan_rs_sqrt
 
 latan_create_rg_state_SOURCES = latan_create_rg_state.c
@@ -68,6 +69,10 @@ latan_rs_read_LDFLAGS = -llatan -L../latan/.libs
 latan_rs_sub_SOURCES = latan_rs_binop.c
 latan_rs_sub_CFLAGS  = $(COM_CFLAGS) -DBINOP=mat_sub
 latan_rs_sub_LDFLAGS = -llatan -L../latan/.libs
+
+latan_rs_sum_SOURCES = latan_rs_unop.c
+latan_rs_sum_CFLAGS  = $(COM_CFLAGS) -DUNOP=mat_sum
+latan_rs_sum_LDFLAGS = -llatan -L../latan/.libs
 
 latan_rs_sqrt_SOURCES = latan_rs_unop.c
 latan_rs_sqrt_CFLAGS  = $(COM_CFLAGS) -DUNOP=mat_sqrt
